--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -76,6 +76,59 @@
                             <img class="review-image" src="../static/images/globalsImages/emptyImage.png" />
                         </div>
                     </div>
+                    <div class="review-container">
+                        <div class="review-profile-name">
+                            <span class="review-profile-name__text">Егор Черников</span>
+                        </div>
+                        <div class="review-text-container">
+                            <span class="review-text">какой то отзыв</span>
+                        </div>
+                        <div class="review-image-container">
+                            <img class="review-image" src="../static/images/globalsImages/emptyImage.png" />
+                        </div>
+                    </div>
+                    <div class="review-container">
+                        <div class="review-profile-name">
+                            <span class="review-profile-name__text">Егор Черников</span>
+                        </div>
+                        <div class="review-text-container">
+                            <span class="review-text">какой то отзыв</span>
+                        </div>
+                        <div class="review-image-container">
+                            <img class="review-image" src="../static/images/globalsImages/emptyImage.png" />
+                        </div>
+                    </div>
+                    <div class="review-container">
+                        <div class="review-profile-name">
+                            <span class="review-profile-name__text">Егор Черников</span>
+                        </div>
+                        <div class="review-text-container">
+                            <span class="review-text">какой то отзыв</span>
+                        </div>
+                        <div class="review-image-container">
+                            <img class="review-image" src="../static/images/globalsImages/emptyImage.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="review-add-container">
+                    <div class="review-add-head">
+                        <span class="review-add-head__text">Добавьте ваш отзыв</span>
+                    </div>
+                    <form class="review-add-form">
+                        <div class="review-add-text-input">
+                            <textarea class="review-add-textarea" ></textarea>
+                            <div class="review-add-attachment">
+                                <img class="review-add-attachment__icon" src="../static/images/globalsImages/addAttachmentIcon.svg">
+                                <span class="review-add-attachment__text">Добавить фото</span>
+                                <label class="review-add-attachment-label">
+                                    <input class="review-add-attachment-label__input" type="file" accept="image/png, image/jpg, image/jpeg"/>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="review-add-submit">
+                            <button class="review-add-submit__button"></button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
