--- a/static/css/supplierPageStyle/_reviews.scss
+++ b/static/css/supplierPageStyle/_reviews.scss
@@ -33,22 +33,26 @@
       width: 18vw;
       height: 18vw;
       background-color: #D9D9D9;
-      justify-content: center;
       border-radius: 3vw;
+      justify-content: center;
+
+      &__photo {
+        font-size: 1vw;
+      }
     }
 
     .reviews-description-container {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      width: 70%;
+      width: 69%;
       padding-left: 5vw;
       padding-right: 2vw;
       line-height: 1.25;
       font-size: 1vw;
 
       .reviews-text {
-        padding-right: 13vw;
+        padding-right: 12vw;
       }
     }
   }
@@ -56,11 +60,11 @@
   .reviews-comment-wrapper {
     display: flex;
     width: 100%;
-    height: 16vw;
+    height: 100%;
     box-shadow: 0px 4px 24.5px 0px rgba(0, 0, 0, 0.2509803922);
     flex-direction: column;
     border-radius: 1vw;
-    padding: 1vw 2.5vw 1vw 2.5vw;
+    padding: 1vw 2.2vw 2vw 2.2vw;
 
     .reviews-comment-head {
 
@@ -70,25 +74,49 @@
     }
 
     .reviews-container {
+      margin-top: 0.5vw;
+      display: flex;
+      flex-direction: column;
+      row-gap: 1vw;
+      max-height: 26vw;
+      overflow-y: auto;
+
+      &::-webkit-scrollbar {
+        display: block;
+        width: 0.5vw;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: #00000040;
+        border-radius: 24px;
+      }
 
       .review-container {
         display: grid;
-        grid-template-rows: 1.5vw 6vw;
-        grid-template-columns: 46vw 8vw;
+        grid-template-rows: 2vw 6vw;
+        grid-template-columns: 46vw 8.5vw;
         grid-template-areas:
         "name name"
         "review image";
-        height: 7vw;
+        height: 8vw;
 
         .review-profile-name {
           grid-area: name;
+          display: flex;
+          align-items: center;
+
+          &__text {
+            font-size: 1vw;
+          }
         }
 
         .review-text-container {
-          border: 1px solid #6D6D6D;
+          border: 0.15vw solid #6D6D6D;
           border-radius: 0.5vw;
           grid-area: review;
           height: 6vw;
+          padding: 0.5% 1%;
+          font-size: 0.8vw;
         }
 
         .review-image-container {
@@ -103,6 +131,76 @@
           .review-image {
             width: 6vw;
             height: 6vw;
+          }
+        }
+      }
+    }
+
+    .review-add-container {
+      margin-top: 3vw;
+
+      .review-add-head {
+        height: 1.8vw;
+
+        &__text {
+          font-size: 1vw;
+        }
+      }
+
+      .review-add-form {
+        display: flex;
+        flex-direction: column;
+
+        .review-add-text-input {
+          display: flex;
+
+          .review-add-textarea {
+            resize: none;
+            width: 46vw;
+            height: 6vw;
+            border: 0.15vw solid #6D6D6D;
+            border-radius: 0.5vw;
+            padding: 0.5% 1%;
+          }
+
+          .review-add-attachment {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            position: relative;
+            cursor: pointer;
+            justify-content: center;
+            align-items: center;
+            border: 0.15vw solid;
+            border-radius: 0.5vw;
+            width: 6vw;
+            height: 6vw;
+            margin-left: 1.3vw;
+
+            &__icon {
+              width: 4vw;
+            }
+
+            &__text {
+              font-size: 0.7vw;
+            }
+
+            &-label {
+              display: block;
+              height: 100%;
+              width: 100%;
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              opacity: 0;
+              cursor: pointer;
+
+              &__input {
+                display: none;
+              }
+            }
           }
         }
       }
