--- a/templates/index.html
+++ b/templates/index.html
@@ -8,50 +8,59 @@
     <link rel="stylesheet" href="../static/css/mainPageStyle/mainStyle.css">
 
     <script>
-        // async function getCurrentUser () {
-        //     try {
-        //         const response = await fetch('http://localhost:8010/api/users/me', {
-        //             method: 'GET',
-        //             credentials: 'include',
-        //             headers: {
-        //                 'Content-Type': 'application/json',
-        //             }
-        //         });
-        //
-        //         if (response.ok) {
-        //             const user = await response.json();
-        //             console.log("Текущий пользователь:", user);
-        //             window.currentUser  = user.data;
-        //             show_steps(window.currentUser.count_steps)
-        //
-        //             updateProgressBar(window.currentUser.count_steps)
-        //         } else {
-        //             window.location.href = "/login";
-        //         }
-        //     } catch (error) {
-        //         console.error("Произошла ошибка:", error);
-        //     }
-        // }
-        //
-        // function updateDOM() {
-        //     const profileAvatar = document.querySelector('.profile-avatar');
-        //     let fio = document.createElement("div")
-        //     let addFio = document.createElement("button")
-        //     console.log(window.currentUser)
-        //     if (currentUser) {
-        //         fio.className = "profile-avatar-fio"
-        //         fio.textContent = window.currentUser.fio
-        //         profileAvatar.append(fio)
-        //     } else {
-        //         addFio.className = "profile-avatar-fio"
-        //         addFio.innerHTML = "Добавить ФИО"
-        //         profileAvatar.append(addFio)
-        //     }
-        // }
-        //
-        // getCurrentUser();
-        //
-        // window.onload = updateDOM
+        function GetCookie(name) {
+            const cookieArray = document.cookie.split('; ');
+            for (const cookie of cookieArray) {
+                const [cookieName, cookieValue] = cookie.split('=');
+                if (cookieName.trim() === name) {
+                    return cookieValue;
+                }
+            }
+            return null;
+        }
+
+        async function getCurrentUser () {
+            let cookie = GetCookie("token")
+            try {
+                const response = await fetch('https://promo.tdanix.ru/api/users/me?token=' + cookie, {
+                    method: 'GET',
+                    headers: {
+                        'accept': 'application/json',
+                    },
+                });
+                if (response.ok) {
+                    const user = await response.json();
+                    console.log("Текущий пользователь:", user);
+                    window.currentUser  = user.data;
+                    show_steps(window.currentUser.count_steps)
+                } else {
+                    // window.location.href = "/login";
+                }
+            } catch (error) {
+                console.error("Произошла ошибка:", error);
+            }
+        }
+
+        function updateDOM() {
+            updateProgressBar(window.currentUser.count_steps)
+            const profileAvatar = document.querySelector('.profile-avatar');
+            let fio = document.createElement("div")
+            let addFio = document.createElement("button")
+            console.log(window.currentUser)
+            if (currentUser) {
+                fio.className = "profile-avatar-fio"
+                fio.textContent = window.currentUser.fio
+                profileAvatar.append(fio)
+            } else {
+                addFio.className = "profile-avatar-fio"
+                addFio.innerHTML = "Добавить ФИО"
+                profileAvatar.append(addFio)
+            }
+        }
+
+        getCurrentUser();
+
+        window.onload = updateDOM
     </script>
 </head>
 <body>
@@ -71,7 +80,7 @@
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                Поставщики
+                                <a href="/reviews">Подарки</a>
                             </li>
                         </ul>
                     </nav>
@@ -110,7 +119,7 @@
                 <div class="profile-container profile">
                     <div class="profile-avatar">
                         <div class="profile-avatar-image"></div>
-                        <span class="profile-avatar-fio">Егор Черников</span>
+<!--                        <span class="profile-avatar-fio">Егор Черников</span>-->
 <!--                        <button class="profile-avatar-fio">Добавить ФИО</button>-->
                     </div>
                     <div class="toys-container">
