адаптив для поставщиков фикс для паззлов чтобы с телефона работало
06.11

--- a/static/css/supplierPageStyle/_mainLogoSuplier.scss
+++ b/static/css/supplierPageStyle/_mainLogoSuplier.scss
@@ -11,7 +11,7 @@
   justify-content: center;
 
   @include mobile {
-    height: 12vw;
+    height: 17vw;
   }
 
   &__heading {
@@ -27,10 +27,18 @@
 
   &__text1 {
     font-size: 4vw;
+
+    @include mobile {
+      font-size: 7vw;
+    }
   }
 
   &__text2 {
     font-size: 5vw;
+
+    @include mobile {
+      font-size: 8.5vw;
+    }
   }
 
   &__image {
@@ -38,7 +46,7 @@
     object-fit: contain;
 
     @include mobile {
-      width: 20vw;
+      width: 35vw;
     }
   }
 }
