--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -118,7 +118,7 @@
                         <div class="review-add-text-input">
                             <textarea class="review-add-textarea" ></textarea>
                             <div class="review-add-attachment">
-                                <img class="review-add-attachment__icon" src="../static/images/globalsImages/addAttachmentIcon.svg">
+                                <img class="review-add-attachment__icon" src="../static/images/globalsImages/addAttachmentIcon.png">
                                 <span class="review-add-attachment__text">Добавить фото</span>
                                 <label class="review-add-attachment-label">
                                     <input class="review-add-attachment-label__input" type="file" accept="image/png, image/jpg, image/jpeg"/>
