Добавлена загрузка при заходе на страницу
06.11

--- a/static/css/mainPageStyle/mainStyle.scss
+++ b/static/css/mainPageStyle/mainStyle.scss
@@ -15,7 +15,8 @@
         "../miniGamesStyle/puzzleGame",
         "../miniGamesStyle/wheelStyle";
 
-@import "../shared/soundSwitch";
+@import "../shared/soundSwitch",
+        "../shared/onload";
 
 body {
   background-color: var(--background-color);
