--- a/templates/prizesPage.html
+++ b/templates/prizesPage.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="../static/css/prizesPageStyle/prizesMainStyle.css">
 </head>
 <body>
+    <div class="onload-wrapper" id="onload">
+        <div class="onload-container" style="">
+            <span class="onload-text">Загрузка...</span>
+            <svg class="onload-spinner" viewBox="0 0 50 50">
+                <circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+        </div>
+    </div>
     <div class="main-prizes-wrapper">
         <header class="wrapper__header header">
             <div class="header-container">
