--- a/static/css/stageTwoStyle/mainStyleStageTwo.scss
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.scss
@@ -12,6 +12,8 @@
         "../shared/soundSwitch",
         "../footer";
 
+@import "../shared/onload";
+
 body {
   background-color: var(--background-color);
   font-family: "Inter", sans-serif;
