--- a/static/css/supplierPageStyle/supplierMainStyle.scss
+++ b/static/css/supplierPageStyle/supplierMainStyle.scss
@@ -7,7 +7,8 @@
         "mainLogoSuplier",
         "reviews";
 
-@import "../shared/soundSwitch";
+@import "../shared/soundSwitch",
+        "../shared/onload";
 
 body {
   background-color: var(--background-color);
