--- a/templates/gameStageTwo.html
+++ b/templates/gameStageTwo.html
@@ -6,8 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="../static/css/stageTwoStyle/mainStyleStageTwo.css" />
+    <script>
+        window.onload = function () {
+            document.getElementById('onload').style.display = 'none';
+        }
+    </script>
 </head>
 <body>
+    <div class="onload-wrapper" id="onload">
+        <div class="onload-container" style="">
+            <span class="onload-text">Загрузка...</span>
+            <svg class="onload-spinner" viewBox="0 0 50 50">
+                <circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+        </div>
+    </div>
     <div class="main-stage-two-wrapper">
         <header class="wrapper__header header">
             <div class="header-container">
