--- a/templates/index.html
+++ b/templates/index.html
@@ -61,10 +61,21 @@
 
         getCurrentUser();
 
-        window.onload = updateDOM
+        window.onload = function () {
+            document.getElementById('onload').style.display = 'none';
+            updateDOM()
+        }
     </script>
 </head>
 <body>
+    <div class="onload-wrapper" id="onload">
+        <div class="onload-container" style="">
+            <span class="onload-text">Загрузка...</span>
+            <svg class="onload-spinner" viewBox="0 0 50 50">
+                <circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+        </div>
+    </div>
     <div class="main-page-wrapper">
         <header class="wrapper__header header">
             <div class="header-container">
