--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -6,6 +6,11 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
   <title>Змейка удачи 2025</title>
   <link rel="stylesheet" href="../static/css/supplierPageStyle/supplierMainStyle.css">
+    <script>
+        window.onload = function () {
+            document.getElementById('onload').style.display = 'none';
+        }
+    </script>
 </head>
 <body>
     <div class="onload-wrapper" id="onload">
