--- a/static/css/miniGamesStyle/_treasureGame.scss
+++ b/static/css/miniGamesStyle/_treasureGame.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
 
   @include mobile {
     width: 90vw;
@@ -70,20 +70,38 @@
   display: flex;
   column-gap: 3vw;
   align-items: flex-end;
-  margin-bottom: 8vw;
+  margin-bottom: 0;
   height: 60%;
-
-  @include mobile {
-    margin-bottom: 15vw;
-  }
 
   .treasure-game-chest {
     width: 8vw;
     cursor: pointer;
     object-fit: contain;
+    transition: opacity 0.5s ease;
+
+    .treasure-game-chest.hidden {
+      opacity: 0; /* Скрываем изображение */
+    }
 
     @include mobile {
       width: 26vw;
     }
+  }
+}
+
+.treasure-game-gift {
+  display: flex;
+  line-height: 1.25;
+  width: 100%;
+  justify-content: center;
+  height: 24%;
+  margin-top: 1vw;
+  text-align: center;
+  font-size: 1.5vw;
+
+  @include mobile {
+    height: 39%;
+    font-size: 5.5vw;
+    align-items: center;
   }
 }
