--- a/templates/index.html
+++ b/templates/index.html
@@ -6,65 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="../static/css/mainPageStyle/mainStyle.css">
-
+    <script src="../static/js/onLoad.js" defer></script>
     <script>
-        function GetCookie(name) {
-            const cookieArray = document.cookie.split('; ');
-            for (const cookie of cookieArray) {
-                const [cookieName, cookieValue] = cookie.split('=');
-                if (cookieName.trim() === name) {
-                    return cookieValue;
-                }
-            }
-            return null;
-        }
-
-        async function getCurrentUser () {
-            let cookie = GetCookie("token")
-            try {
-                const response = await fetch('https://promo.tdanix.ru/api/users/me', {
-                    method: 'GET',
-                    headers: {
-                        'accept': 'application/json',
-                        'token': cookie,
-                    },
-                });
-                if (response.ok) {
-                    const user = await response.json();
-                    console.log("Текущий пользователь:", user);
-                    window.currentUser  = user.data;
-                    show_steps(window.currentUser.count_steps)
-                } else {
-                    window.location.href = "/login";
-                }
-            } catch (error) {
-                console.error("Произошла ошибка:", error);
-            }
-        }
-
-        function updateDOM() {
-            updateProgressBar(window.currentUser.count_steps)
-            const profileAvatar = document.querySelector('.profile-avatar');
-            let fio = document.createElement("div")
-            let addFio = document.createElement("button")
-            console.log(window.currentUser)
-            if (currentUser) {
-                fio.className = "profile-avatar-fio"
-                fio.textContent = window.currentUser.fio
-                profileAvatar.append(fio)
-            } else {
-                addFio.className = "profile-avatar-fio"
-                addFio.innerHTML = "Добавить ФИО"
-                profileAvatar.append(addFio)
-            }
-        }
-
-        getCurrentUser();
-
-        window.onload = function () {
-            document.getElementById('onload').style.display = 'none';
-            updateDOM()
-        }
+        // getCurrentUser();
+        //
+        // window.onload = function () {
+        //     document.getElementById('onload').style.display = 'none';
+        //     updateDOM()
+        // }
     </script>
 </head>
 <body>
@@ -191,7 +140,7 @@
             <div class="main-game-step" id="step_8" style="display: none">8</div>
             <div class="main-game-step" id="step_9" style="display: none">9</div>
             <div class="main-game-step" id="step_10" style="display: flex">10</div>
-            <div class="main-game-step" id="step_11" style="display: none">11</div>
+            <div class="main-game-step" id="step_11" style="display: none" onclick=openTreasure()>11</div>
             <div class="main-game-step" id="step_12" style="display: none">12</div>
             <div class="main-game-step" id="step_13" style="display: none">13</div>
             <div class="main-game-step" id="step_14" style="display: none">14</div>
@@ -236,6 +185,9 @@
                 <img class="treasure-game-chest" id="chest2" src="../static/images/miniGameImages/chest2.png">
                 <img class="treasure-game-chest" id="chest3" src="../static/images/miniGameImages/chest3.png">
             </div>
+            <div class="treasure-game-gift">
+                <span class="treasure-game-gift__text"></span>
+            </div>
         </div>
     </div>
     <div class="tic-tac-game-wrapper" id="ticTacGame" style="display: none">
@@ -264,6 +216,9 @@
                         <div class="tic-tac-cell" id="cell-9"></div>
                     </div>
                 </div>
+            </div>
+            <div class="tic-tac-restart-button">
+                <img class="tic-tac-restart-button__icon" src="../static/images/globalsImages/roundArrowIcon.png">
             </div>
         </div>
     </div>
@@ -324,7 +279,6 @@
         <img class="footer-elka" src="../static/images/globalsImages/treeZeroGif.gif" />
         <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
-    <script src="../static/js/onLoad.js"></script>
     <script src="../static/js/puzzleGame.js"></script>
     <script src="../static/js/treasureGame.js"></script>
     <script src="../static/js/soundSwitch.js"></script>
